# For each test file, create an executable, ensure it links properly and
# then add it to the test set with add_test. Additionally, add it as a
# dependency to the check goal so that running 'make check' builds and runs
# the test case.

# Example:
#   add_executable(run_tests test.cpp)
#   target_link_libraries(run_tests gtest gtest_main)
#   add_test(run_tests run_tests)
#   add_dependencies(check run_tests)
